<resources>
    <string name="app_name">CoroutinesDemo</string>

    <string name="blocking_main">是否阻塞UI线程</string>
    <string name="run_blocking_delay">RunBlocking Delay</string>
    <string name="job_join">Job Join</string>
    <string name="scope">Scope</string>
    <string name="repeat">Repeat</string>
    <string name="cancel">Cancel</string>
    <string name="timeout">Timeout</string>
    <string name="sync">Sync</string>
    <string name="async">Async</string>
    <string name="lazy_async">Lazy Async</string>
    <string name="dispatcher">Dispatcher</string>
    <string name="flow">Flow</string>
    <string name="timeout_flow">Timeout Flow</string>
    <string name="transform_take_flow">Transform Take Flow</string>
    <string name="zip_flow">Zip Flow</string>
    <string name="channel">Channel</string>
    <string name="close_channel">Close Channel</string>



</resources>
